fix: clean dataset fix National and Internation misplaced letters

--- a/tardis_eda.ipynb
+++ b/tardis_eda.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d0c75201",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "bdc41ca8",
    "metadata": {},
    "outputs": [],
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e75dcb84",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "5a0d2f87",
    "metadata": {},
    "outputs": [],
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "114ef454",
    "metadata": {},
    "outputs": [],
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "4fb08f13",
    "metadata": {},
    "outputs": [],
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "a6af42f1",
    "metadata": {},
    "outputs": [],
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "451b3e69",
    "metadata": {},
    "outputs": [],
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "53975e0e",
    "metadata": {},
    "outputs": [],
@@ -426,8 +426,14 @@
     "\n",
     "        # Service\n",
     "        elif column.lower() == \"service\":\n",
-    "            df[column] = df[column].fillna(\"International\")\n",
-    "\n",
+    "            df[column] = (\n",
+    "                df[column]\n",
+    "                .fillna(\"\")\n",
+    "                .astype(str)\n",
+    "                .str.strip()\n",
+    "                .apply(lambda x: get_closest_match(x, [\"National\", \"International\"]))\n",
+    "            )\n",
+    "            df[column] = df[column].replace(\"None\", \"International\")\n",
     "        # Colonnes numériques\n",
     "        else:\n",
     "            try:\n",
@@ -454,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "2d5c01ec",
    "metadata": {},
    "outputs": [],
@@ -467,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "15b1b283",
    "metadata": {},
    "outputs": [],
@@ -483,15 +489,27 @@
     "    to_csv(cleaned, path=\"cleaned_dataset.csv\")\n",
     "\n",
     "    # Récupération des données\n",
-    "    data_values_dic, data_values_tab = get_data_program(cleaned)"
+    "    data_values_dic, data_values_tab = get_data_program(cleaned)\n",
+    "    return (data_values_dic, data_values_tab)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "23d480b2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_40032/187955005.py:26: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "  df[column] = df[column].fillna(method='ffill')\n",
+      "/tmp/ipykernel_40032/4144161324.py:12: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  temp_dic[df_grouped.columns[i]] = tab[i]\n"
+     ]
+    }
+   ],
    "source": [
     "if __name__ == \"__main__\":\n",
     "    main()"
