--- a/tardis_eda.ipynb
+++ b/tardis_eda.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 83,
    "id": "d0c75201",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 84,
    "id": "bdc41ca8",
    "metadata": {},
    "outputs": [],
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 85,
    "id": "e75dcb84",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 86,
    "id": "5a0d2f87",
    "metadata": {},
    "outputs": [],
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 87,
    "id": "114ef454",
    "metadata": {},
    "outputs": [],
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 88,
    "id": "4fb08f13",
    "metadata": {},
    "outputs": [],
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 89,
    "id": "a6af42f1",
    "metadata": {},
    "outputs": [],
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 90,
    "id": "451b3e69",
    "metadata": {},
    "outputs": [],
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 91,
    "id": "53975e0e",
    "metadata": {},
    "outputs": [],
@@ -381,6 +381,32 @@
   },
   {
    "cell_type": "markdown",
+   "id": "77f0d031",
+   "metadata": {},
+   "source": [
+    "Clean dataset if a mandatory column is empty"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "f6a3d4d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def missing_mandatory(df, mandatory_cols):\n",
+    "    df_clean = df.copy()\n",
+    "    for col in mandatory_cols:\n",
+    "        if col in df_clean.columns:\n",
+    "            idx_to_drop = df_clean[\n",
+    "                df_clean[col].isna() | (df_clean[col].astype(str).str.lower() == 'nan')\n",
+    "            ].index\n",
+    "            df_clean = df_clean.drop(index=idx_to_drop)\n",
+    "    return df_clean"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9ff0fdca",
    "metadata": {},
    "source": [
@@ -392,25 +418,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 93,
    "id": "625d633b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "mandatory = [\"Date\", \"Service\", \"Departure station\", \"Arrival station\"]\n",
+    "\n",
     "def clean_data(df: pd.DataFrame):\n",
-    "\n",
-    "    # 1. Remplacement global des valeurs cheloues\n",
-    "    df = df.replace(\n",
-    "        [\"N/A\", \"NA\", \"NaN\", \"None\", \"null\", \"\", \" \"],\n",
-    "        pd.NA\n",
+    "    \n",
+    "    df = missing_mandatory(df, mandatory)\n",
+    "    df = df.drop_duplicates(\n",
+    "        subset=mandatory,\n",
+    "        keep=\"first\"\n",
     "    )\n",
-    "\n",
     "    # 2. Correction par colonne\n",
     "    for column in df.columns:\n",
     "        col_lower = column.lower()\n",
     "\n",
     "        # Nettoyage des stations + commentaires\n",
-    "        if column in [\"Departure station\", \"Arrival station\"] or \"comment\" in col_lower:\n",
+    "        if column in [\"Departure station\", \"Arrival station\"]:\n",
     "            df[column] = (\n",
     "                df[column]\n",
     "                .fillna(\"\")\n",
@@ -431,9 +458,8 @@
     "                .fillna(\"\")\n",
     "                .astype(str)\n",
     "                .str.strip()\n",
-    "                .apply(lambda x: get_closest_match(x, [\"National\", \"International\"]))\n",
+    "                .apply(lambda x: x if x in [\"National\", \"International\"] else \"International\")\n",
     "            )\n",
-    "            df[column] = df[column].replace(\"None\", \"International\")\n",
     "        # Colonnes numériques\n",
     "        else:\n",
     "            try:\n",
@@ -450,17 +476,13 @@
     "    df = df.apply(fix_delay_consistency, axis=1)\n",
     "\n",
     "    # 4. Supprimer doublons (même départ/arrivée)\n",
-    "    df = df.drop_duplicates(\n",
-    "        subset=[\"Departure station\", \"Arrival station\", \"Date\"],\n",
-    "        keep=\"first\"\n",
-    "    )\n",
     "\n",
     "    return df\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 94,
    "id": "2d5c01ec",
    "metadata": {},
    "outputs": [],
@@ -473,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 95,
    "id": "15b1b283",
    "metadata": {},
    "outputs": [],
@@ -489,13 +511,12 @@
     "    to_csv(cleaned, path=\"cleaned_dataset.csv\")\n",
     "\n",
     "    # Récupération des données\n",
-    "    data_values_dic, data_values_tab = get_data_program(cleaned)\n",
-    "    return (data_values_dic, data_values_tab)"
+    "    return 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 96,
    "id": "23d480b2",
    "metadata": {},
    "outputs": [
@@ -503,10 +524,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_40032/53357407.py:26: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
-      "  df[column] = df[column].fillna(method='ffill')\n",
-      "/tmp/ipykernel_40032/4144161324.py:12: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
-      "  temp_dic[df_grouped.columns[i]] = tab[i]\n"
+      "/tmp/ipykernel_53539/1146773319.py:27: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "  df[column] = df[column].fillna(method='ffill')\n"
      ]
     }
    ],
