refactor:perf: cleaning dataset correctly by suppressing duplicates, feat: added two bar charts of average journey time and average delay for routes

--- a/tardis_eda.ipynb
+++ b/tardis_eda.ipynb
@@ -334,7 +334,12 @@
     "    except Exception as e:\n",
     "        if not e:\n",
     "            print(e)\n",
-    "        return False"
+    "        return False\n",
+    "\n",
+    "def date_formatting(df):\n",
+    "    df[\"Date\"] = pd.to_datetime(df[\"Date\"], format=\"%Y-%m\", errors=\"coerce\")\n",
+    "    df[\"Date\"] = df[\"Date\"].dt.strftime(\"%Y-%m\")\n",
+    "    return df"
    ]
   },
   {
@@ -437,7 +442,7 @@
     "        col_lower = column.lower()\n",
     "\n",
     "        # Nettoyage des stations + commentaires\n",
-    "        if column in [\"Departure station\", \"Arrival station\"] or \"comment\" in col_lower:\n",
+    "        if column in [\"Departure station\", \"Arrival station\"] or \"comment\" in col_lower :\n",
     "            df[column] = (\n",
     "                df[column]\n",
     "                .fillna(\"\")\n",
