fix: removed lines where mandatory columns missing, fix: ruff formatted tardis_model because no one does a shit (younes travaille stp) so i can do it good later and everyone is happy about marvin ptn

--- a/tardis_eda.ipynb
+++ b/tardis_eda.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 139,
    "id": "d0c75201",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 140,
    "id": "bdc41ca8",
    "metadata": {},
    "outputs": [],
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 141,
    "id": "e75dcb84",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 142,
    "id": "5a0d2f87",
    "metadata": {},
    "outputs": [],
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 143,
    "id": "114ef454",
    "metadata": {},
    "outputs": [],
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 144,
    "id": "4fb08f13",
    "metadata": {},
    "outputs": [],
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 145,
    "id": "a6af42f1",
    "metadata": {},
    "outputs": [],
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 146,
    "id": "451b3e69",
    "metadata": {},
    "outputs": [],
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 147,
    "id": "53975e0e",
    "metadata": {},
    "outputs": [],
@@ -394,19 +394,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 148,
    "id": "f6a3d4d9",
    "metadata": {},
    "outputs": [],
    "source": [
     "def missing_mandatory(df, mandatory_cols):\n",
     "    df_clean = df.copy()\n",
+    "\n",
     "    for col in mandatory_cols:\n",
     "        if col in df_clean.columns:\n",
-    "            idx_to_drop = df_clean[\n",
-    "                df_clean[col].isna() | (df_clean[col].astype(str).str.lower() == 'nan')\n",
-    "            ].index\n",
-    "            df_clean = df_clean.drop(index=idx_to_drop)\n",
+    "            df_clean[col] = df_clean[col].astype(str).str.strip().str.lower()\n",
+    "            df_clean = df_clean[\n",
+    "                ~df_clean[col].isin([\"\", \"nan\", \"none\", \"null\"])\n",
+    "            ]\n",
+    "    \n",
+    "    df_clean = df_clean.replace(\"nan\", pd.NA)\n",
+    "\n",
     "    return df_clean"
    ]
   },
@@ -423,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 149,
    "id": "625d633b",
    "metadata": {},
    "outputs": [],
@@ -487,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 150,
    "id": "2d5c01ec",
    "metadata": {},
    "outputs": [],
@@ -500,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 151,
    "id": "15b1b283",
    "metadata": {},
    "outputs": [],
@@ -521,10 +525,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 152,
    "id": "23d480b2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_53539/2845284888.py:27: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "  df[column] = df[column].fillna(method='ffill')\n"
+     ]
+    }
+   ],
    "source": [
     "if __name__ == \"__main__\":\n",
     "    main()"
