--- a/tardis_model.ipynb
+++ b/tardis_model.ipynb
@@ -20,13 +20,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.linear_model import KNeighborsClassifier\n",
-    "from sklearn.metrics import mean_squared_error, r2_score\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "from tardis_eda import get_data_program"
+    "# import pandas as pd\n",
+    "# import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -44,13 +39,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def show_pred(X_test, y_test, y_pred):\n",
-    "    plt.scatter(X_test, y_test, color=\"blue\", label=\"Vraies valeurs\")\n",
-    "    plt.plot(X_test, y_pred, color=\"red\", label=\"Prédictions\")\n",
-    "    plt.xlabel(\"schTrains\")\n",
-    "    plt.ylabel(\"CanTrains\")\n",
-    "    plt.legend()\n",
-    "    plt.show()"
+    "# def show_pred(X_test, y_test, y_pred):\n",
+    "#     plt.scatter(X_test, y_test, color=\"blue\", label=\"Vraies valeurs\")\n",
+    "#     plt.plot(X_test, y_pred, color=\"red\", label=\"Prédictions\")\n",
+    "#     plt.xlabel(\"schTrains\")\n",
+    "#     plt.ylabel(\"CanTrains\")\n",
+    "#     plt.legend()\n",
+    "#     plt.show()"
    ]
   },
   {
@@ -68,29 +63,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def training_model():\n",
-    "    data_dic, data_tab = get_data_program()\n",
-    "    useful_data_paris = {\n",
-    "        \"schTrains\": data_tab[\"PARIS EST\"][\"Number of scheduled trains\"],\n",
-    "        \"CanTrains\": data_tab[\"PARIS EST\"][\"Number of cancelled trains\"],\n",
-    "    }\n",
-    "    df = pd.DataFrame(useful_data_paris)\n",
-    "    x = df[[\"schTrains\"]]\n",
-    "    y = df[[\"CanTrains\"]]\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(\n",
-    "        x, y, test_size=0.2, random_state=42\n",
-    "    )\n",
-    "    # Données lu et séparées\n",
-    "    model = KNeighborsClassifier()\n",
-    "    model.fit(X_train, y_train)\n",
-    "    # Model entrainé\n",
-    "    y_pred = model.predict(X_test)\n",
-    "    print(y_pred)\n",
-    "    # Prédiction effectuées\n",
-    "    mse = mean_squared_error(y_test, y_pred)\n",
-    "    # \"Erreur quadratique moyenne: valeur mse\n",
-    "    r2 = r2_score(y_test, y_pred)\n",
-    "    # Coefficient de détermination: valeur r2"
+    "# def training_model():\n",
+    "#     data_dic, data_tab = get_data_program()\n",
+    "#     useful_data_paris = {\n",
+    "#         \"schTrains\": data_tab[\"PARIS EST\"][\"Number of scheduled trains\"],\n",
+    "#         \"CanTrains\": data_tab[\"PARIS EST\"][\"Number of cancelled trains\"],\n",
+    "#     }\n",
+    "#     df = pd.DataFrame(useful_data_paris)\n",
+    "#     x = df[[\"schTrains\"]]\n",
+    "#     y = df[[\"CanTrains\"]]\n",
+    "#     X_train, X_test, y_train, y_test = train_test_split(\n",
+    "#         x, y, test_size=0.2, random_state=42\n",
+    "#     )\n",
+    "#     # Données lu et séparées\n",
+    "#     model = KNeighborsClassifier()\n",
+    "#     model.fit(X_train, y_train)\n",
+    "#     # Model entrainé\n",
+    "#     y_pred = model.predict(X_test)\n",
+    "#     print(y_pred)\n",
+    "#     # Prédiction effectuées\n",
+    "#     #mse = mean_squared_error(y_test, y_pred)\n",
+    "#     # \"Erreur quadratique moyenne: valeur mse\n",
+    "#     #r2 = r2_score(y_test, y_pred)\n",
+    "#     # Coefficient de détermination: valeur r2"
    ]
   },
   {
@@ -101,7 +96,8 @@
    "outputs": [],
    "source": [
     "def main():\n",
-    "    training_model()\n",
+    "    # training_model()\n",
+    "    return 0\n",
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
