feat: added a prediction model in home.py, removed debug print

--- a/tardis_model.ipynb
+++ b/tardis_model.ipynb
@@ -2,106 +2,73 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2ed26bb9",
+   "id": "dd049af9",
    "metadata": {},
    "source": [
-    "Imports:\n",
-    "- sklearn functions for prediction model\n",
-    "- numpy for array management\n",
-    "- pandas for dataframe management (optional)\n",
-    "- matplotlib for data visualization\n",
-    "- get_data_program from tardis_eda to get tabs and dictionaries"
+    "Tardis model used for data prediction, give a prediction of the data of the next month"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee8d9442",
+   "id": "ba61b76c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import pandas as pd\n",
-    "# import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "546a17db",
-   "metadata": {},
-   "source": [
-    "Show predictions in a simple plot (temporary for better visualization)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f634d7bd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def show_pred(X_test, y_test, y_pred):\n",
-    "#     plt.scatter(X_test, y_test, color=\"blue\", label=\"Vraies valeurs\")\n",
-    "#     plt.plot(X_test, y_pred, color=\"red\", label=\"Prédictions\")\n",
-    "#     plt.xlabel(\"schTrains\")\n",
-    "#     plt.ylabel(\"CanTrains\")\n",
-    "#     plt.legend()\n",
-    "#     plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5927fcdc",
-   "metadata": {},
-   "source": [
-    "Simple training model of prediction by num of scheduled trains and number of cancelled trains and train by KNeighborsClassifiers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "15522677",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def training_model():\n",
-    "#     data_dic, data_tab = get_data_program()\n",
-    "#     useful_data_paris = {\n",
-    "#         \"schTrains\": data_tab[\"PARIS EST\"][\"Number of scheduled trains\"],\n",
-    "#         \"CanTrains\": data_tab[\"PARIS EST\"][\"Number of cancelled trains\"],\n",
-    "#     }\n",
-    "#     df = pd.DataFrame(useful_data_paris)\n",
-    "#     x = df[[\"schTrains\"]]\n",
-    "#     y = df[[\"CanTrains\"]]\n",
-    "#     X_train, X_test, y_train, y_test = train_test_split(\n",
-    "#         x, y, test_size=0.2, random_state=42\n",
-    "#     )\n",
-    "#     # Données lu et séparées\n",
-    "#     model = KNeighborsClassifier()\n",
-    "#     model.fit(X_train, y_train)\n",
-    "#     # Model entrainé\n",
-    "#     y_pred = model.predict(X_test)\n",
-    "#     print(y_pred)\n",
-    "#     # Prédiction effectuées\n",
-    "#     #mse = mean_squared_error(y_test, y_pred)\n",
-    "#     # \"Erreur quadratique moyenne: valeur mse\n",
-    "#     #r2 = r2_score(y_test, y_pred)\n",
-    "#     # Coefficient de détermination: valeur r2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9d15da26",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def main():\n",
-    "    # training_model()\n",
-    "    return 0\n",
+    "import pandas as pd\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
+    "def predict_next_month(csv_path):\n",
+    "    with open(csv_path, \"r\", encoding=\"utf-8\") as f:\n",
+    "        lines = f.readlines()\n",
+    "    header = lines[0].strip().split(\";\")\n",
+    "    expected_cols = len(header)\n",
+    "    data = [line.strip().split(\";\") for line in lines[1:] if len(line.strip().split(\";\")) == expected_cols]\n",
+    "    df = pd.DataFrame(data, columns=header)\n",
     "\n",
-    "if __name__ == \"__main__\":\n",
-    "    main()"
+    "    cols_to_use = [\n",
+    "        \"Date\",\n",
+    "        \"Average journey time\",\n",
+    "        \"Number of scheduled trains\",\n",
+    "        \"Number of trains delayed at departure\",\n",
+    "        \"Average delay of late trains at departure\"\n",
+    "    ]\n",
+    "\n",
+    "    for col in cols_to_use[1:]:\n",
+    "        df[col] = pd.to_numeric(df[col], errors=\"coerce\")\n",
+    "\n",
+    "    df = df.dropna(subset=cols_to_use)\n",
+    "    df[\"Month\"] = df[\"Date\"].str.strip()\n",
+    "    months = sorted(df[\"Month\"].unique())\n",
+    "    last_month = months[-1]\n",
+    "    train_data = df[df[\"Month\"] != last_month]\n",
+    "    test_data = df[df[\"Month\"] == last_month]\n",
+    "\n",
+    "    X_train = train_data[[\n",
+    "        \"Average journey time\",\n",
+    "        \"Number of scheduled trains\",\n",
+    "        \"Number of trains delayed at departure\"\n",
+    "    ]]\n",
+    "    y_train = train_data[\"Average delay of late trains at departure\"]\n",
+    "\n",
+    "    X_test = test_data[[\n",
+    "        \"Average journey time\",\n",
+    "        \"Number of scheduled trains\",\n",
+    "        \"Number of trains delayed at departure\"\n",
+    "    ]]\n",
+    "    y_test = test_data[\"Average delay of late trains at departure\"]\n",
+    "\n",
+    "    model = LinearRegression()\n",
+    "    model.fit(X_train, y_train)\n",
+    "    y_pred = model.predict(X_test)\n",
+    "\n",
+    "    moyenne_predite = round(y_pred.mean(), 2)\n",
+    "    moyenne_reelle = round(y_test.mean(), 2)\n",
+    "\n",
+    "    print(f\"Mois testé : {last_month}\")\n",
+    "    print(f\"Moyenne prédite : {moyenne_predite} minutes\")\n",
+    "    print(f\"Moyenne réelle   : {moyenne_reelle} minutes\")"
    ]
   }
  ],
